# before-it-breaks

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: config.yaml
data/processed/: test.parquet
data/raw/: RUL_FD001.txt.sha256  test_FD001.txt.sha256  train_FD001.txt.sha256
docs/blog/: before-it-breaks.md
hf_space/: README.md  app.py  requirements.txt
models/: drift_reference.json  lstm_rul.pt  shap_baseline.json  training_stats.json
notebooks/: EDA.ipynb
reports/: results.json
research-notes/: 01-saxena-goebel-2008-cmapss.md  02-zheng-2017-piecewise-linear-rul.md  03-malhotra-2016-lstm-anomaly.md  04-li-2018-deep-cnn-rul.md  05-wu-2020-feature-selection-cmapss.md
scripts/: block_dangerous.ps1  download_cmapss.py  run_evaluation.py
src/: __init__.py  config.py  exceptions.py  logger.py
src/api/: __init__.py  app.py
src/dashboard/: __init__.py  streamlit_app.py
src/data/: __init__.py  dataset.py  safe_predict.py  schemas.py  skew_check.py  validation.py
src/model/: base.py  (+5 more)
tests/: conftest.py  test_anti_leakage.py  test_api.py  test_coverage_regression.py  test_dashboard.py  test_dataset.py  test_evaluate.py  test_integration.py  test_lstm.py  test_scaffold.py  test_shap.py  test_skew_check.py  test_train.py  test_validation.py
utils/: seed.py
(+3 files in other folders)
