[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "before-it-breaks"
version = "0.1.0"
description = "Predictive Maintenance · Remaining Useful Life Forecasting (NASA CMAPSS FD001)"
authors = [{name = "Priyrajsinh Parmar", email = "priyrajsinh03@gmail.com"}]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["torch.*", "sklearn.*", "shap.*", "mlflow.*", "pandera.*", "gradio.*", "streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["error::DeprecationWarning"]
asyncio_mode = "auto"
markers = [
    "needs_data: test requires real CMAPSS files in data/raw/ (downloaded by scripts/download_cmapss.py)",
]

[tool.interrogate]
fail-under = 80
verbose = 1

[tool.coverage.run]
source = ["src"]
